<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.WeatherActivity">

    <Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/weather_title"
            android:textSize="20sp" />
    </Toolbar>

    <TextView
        android:id="@+id/textView_name_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"
        tools:text="Saratov" />

    <TextView
        android:id="@+id/textView_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        tools:text="@string/temp" />

    <TextView
        android:id="@+id/textView_feelsLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        tools:text="@string/feels_like" />

    <TextView
        android:id="@+id/textView_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        tools:text="@string/min_max_pressure_humidity_visibility" />

    <TextView
        android:id="@+id/textView_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        tools:text="@string/wind_speed_gust_direction" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>